unify kmin, kmax and sigma_W definitions in EUCLID and LSST

--- a/forecast/fisher_inis/params_EUCLID.ini
+++ b/forecast/fisher_inis/params_EUCLID.ini
@@ -21,21 +21,24 @@ z = 0.6 0.8 1. 1.2 1.4 1.6 1.8 2.
 delta_z  = 0.2 0.2 0.2 0.2 0.2 0.2 0.2 0.2 
 #effective of observed galaxies per h^{-3}Mpc^3
 nobs = 1.78e-3 1.21e-3 0.905e-3 0.72e-3 0.495e-3 0.275e-3 0.145e-3 0.075e-3
+
+
 #minimum k cutoff, unit h Mpc^{-1}
 #Here is the width of the window function: \sigma_w = sqrt(2ln(2))kmin/2*pi in the notation of 1201.5955 or windowi= sqrt(ln(2)) kmin/pi  in current notatoin.
-kmin = 3.3e-3 2.9e-3 2.7e-3 2.6e-3 2.5e-3 2.4e-3 2.4e-3 2.4e-3 
-#maximum k cutoff, unit h Mpc^{-1}
-kmax = 0.15 0.17 0.2 0.21 0.22 0.22 0.23 0.23
-window1 = 8.8e-4
-window2 = 7.7e-4
-window3 = 7.1e-4
-window4 = 6.9e-4
-window5 = 6.6e-4
-window6 = 6.4e-4
-window7 = 6.4e-4
-window8 = 6.4e-4
+kmin =    0.609397E-02   0.543855E-02   0.505873E-02   0.482372E-02   0.467357E-02   0.457693E-02   0.451587E-02   0.447944E-02
 
-k_linear_sampling = 0.003
+#maximum k cutoff, unit h Mpc^{-1}
+kmax =   0.094599  0.107699  0.122171  0.138090  0.156083  0.175154  0.196555  0.218988
+window1 =    0.161496E-02
+window2 =    0.144127E-02
+window3 =    0.134061E-02
+window4 =    0.127834E-02
+window5 =    0.123855E-02
+window6 =    0.121294E-02
+window7 =    0.119675E-02
+window8 =    0.118710E-02
+
+k_linear_sampling = 0.01
 
 #here window functions are not specified; COOP will use a Gaussian window with sigma = kmin
 
