--- a/forecast/fisher_inis/params_mpk_LSST_with_window.ini
+++ b/forecast/fisher_inis/params_mpk_LSST_with_window.ini
@@ -30,11 +30,11 @@ delta_z  = 0.22 0.26 0.32 0.36 0.46 0.52 0.66
 #effective of observed galaxies per h^{-3}Mpc^3
 nobs = 0.154773 0.104141 0.0642795 0.0360282 0.0174214 0.00695256 0.00219223
 #minimum k cutoff, unit h Mpc^{-1}
-kmin = 0.0070704 0.00502788 0.00396274 0.00345003 0.00300675 0.00281478 0.00259365
+kmin =    0.707408E-02   0.503287E-02   0.396848E-02   0.345637E-02   0.301327E-02   0.282162E-02   0.260050E-02
 #maximum k cutoff, unit h Mpc^{-1}
-kmax = 0.12 0.14 0.17 0.21 0.28 0.38 0.53
+kmax =   0.078157  0.091582  0.110449  0.137099  0.173897  0.228662  0.307244
 
-k_linear_sampling = 0.003
+k_linear_sampling = 0.01
 
 #define a window function in each bin
 #it can be a Gaussian width sigma (in h Mpc^{-1}) that gives |W(k)|^2 \propto exp[- k^2/sigma^2 ] (note: this sigma is different from sigma_W in 1201.5955 by a factor of sqrt(2))
@@ -42,13 +42,13 @@ k_linear_sampling = 0.003
 #if window# is not specified; kmin will be used as the Gaussian width.
 #Because of the difference in the definition for the width of the window equal to kmin, multiply kmin by sqrt(2).
 #Here is the width of the window function: \sigma_w = sqrt(2ln(2))kmin/2*pi in the notation of 1201.5955 or windowi= sqrt(ln(2)) kmin/pi  in current notatoin.
-window1 = 0.00187373
-window2 = 0.00133244
-window3 = 0.00105017
-window4 = 0.000914293
-window5 = 0.000796821
-window6 = 0.000745947
-window7 = 0.000687343
+window1 =    0.187470E-02
+window2 =    0.133376E-02
+window3 =    0.105169E-02
+window4 =    0.915974E-03
+window5 =    0.798547E-03
+window6 =    0.747759E-03
+window7 =    0.689159E-03
 #window8 = fisher_inis/test_window.txt
 
 
