increase l resolution in conservative Planck data

--- a/forecast/fisher_inis/params_planck_conservative.ini
+++ b/forecast/fisher_inis/params_planck_conservative.ini
@@ -9,6 +9,8 @@ params = ombh2 omch2 theta h tau logA ns nrun r nt user_pp1 user_pp2 user_pp3 us
 # temperature l cutoffs 
 lmin = 2
 lmax = 2500
+#for smooth model set to something like 40-60; for fast oscillating model set to 3-5; (you may want to set it to 1, but the mask mode-mixing and the 3D-2D projection makes it almost useless to set l_resolution = 1)
+l_resolution = 5  
 #sky coverage for temperature data (0-1)
 fsky = 0.65
 
