--- a/forecast/fisher_inis/fisher_modified_pk.ini
+++ b/forecast/fisher_inis/fisher_modified_pk.ini
@@ -1,8 +1,8 @@
 #number of cosmological parameters + nuisance parameters
-n_params = 29
+n_params = 34
 
 #name of parameters
-param_names = ombh2 omch2 tau theta user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise cmb_n_noise cmb_A_noise_pol cmb_n_noise_pol  A_tSZ
+param_names = ombh2 omch2 tau theta user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise cmb_n_noise cmb_run_noise cmb_A_noise_pol cmb_n_noise_pol  cmb_run_noise_pol cmb_A_tSZ cmb_TE_leakage_eps0  cmb_TE_leakage_eps2  cmb_TE_leakage_eps4
 
 #slow parameters (will change cosmological background or perturbations)
 params_slow = ombh2 omch2 tau theta
@@ -44,9 +44,14 @@ param[mpk_b0_7] = 1.491 -0.03 0.03
 param[mpk_b0_8] = 1.568 -0.04 0.04
 param[cmb_A_noise] = 1. -0.01 0.01 0.01
 param[cmb_n_noise] = 0. 0.003 -0.003 0.01
+param[cmb_run_noise] = 0. 0.003 -0.003 0.01
 param[cmb_A_noise_pol] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise_pol] = 0. 0.003 -0.003 0.01
-param[cmb_A_tSZ] = 1.d0  0.5 -0.5  1.
+param[cmb_run_noise_pol] = 0. 0.003 -0.003 0.01
+param[cmb_A_tSZ] = 1. 0.5 -0.5 1.
+param[cmb_TE_leakage_eps0] = 0.  0.0001
+param[cmb_TE_leakage_eps2] = 0.  0.0002
+param[cmb_TE_leakage_eps4] = 0.  0.0004
 
 n_observations = 2
 observation1 =  fisher_inis/params_planck.ini
