--- a/forecast/fisher_inis/fisher_lcdm.ini
+++ b/forecast/fisher_inis/fisher_lcdm.ini
@@ -1,7 +1,7 @@
 #number of cosmological parameters + nuisance parameters
-n_params = 22
+n_params = 27
 #name of parameters
-param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise cmb_n_noise cmb_A_noise_pol cmb_n_noise_pol cmb_A_tSZ
+param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise cmb_n_noise cmb_run_noise cmb_A_noise_pol cmb_n_noise_pol cmb_run_noise_pol cmb_A_tSZ cmb_TE_leakage_eps0 cmb_TE_leakage_eps2 cmb_TE_leakage_eps4
 #param_names = ombh2 omch2 tau theta logA ns nrun sn_absolute_m mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8 cmb_A_noise
 
 #slow parameters (will change cosmological background or perturbations)
@@ -11,14 +11,14 @@ params_slow = ombh2 omch2 tau theta
 #fast parameters (will chagne primordial power spectrum)
 params_fast = logA ns nrun
 #output root; the output file will be ROOT_cov.txt, ROOT_fisher.txt and ROOT_std.txt
-root = fisher_out/lcdm_Planck_pess
+root = fisher_out/lcdm
 
 ## fiducial value; [trial step1; trial step2; Gaussian piror width]
-param[ombh2] = 0.022 
-param[omch2] = 0.12 
-param[tau] = 0.082
-param[theta] = 1.04 
-param[logA] = 3.1 0.03
+param[ombh2] = 0.022 0.0002
+param[omch2] = 0.12  0.002
+param[tau] = 0.07 0.01 -0.01 0.02
+param[theta] = 1.04 0.0002
+param[logA] = 3.1 0.008
 param[ns] = 0.97  0.005 
 param[nrun] = 0. 
 param[sn_absolute_m] = 19. 
@@ -33,11 +33,16 @@ param[mpk_b0_7] = 1.491 0.01
 param[mpk_b0_8] = 1.568 
 param[cmb_A_noise] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise] = 0. 0.003 -0.003 0.01
+param[cmb_run_noise] = 0. 0.003 -0.003 0.01
 param[cmb_A_noise_pol] = 1. 0.003 -0.003 0.01
 param[cmb_n_noise_pol] = 0. 0.003 -0.003 0.01
-param[cmb_A_tSZ] = 1.d0  0.5 -0.5  1.
+param[cmb_run_noise_pol] = 0. 0.003 -0.003 0.01
+param[cmb_A_tSZ] = 1.  0.5 -0.5  1.
+param[cmb_TE_leakage_eps0] = 0.  0.0001 
+param[cmb_TE_leakage_eps2] = 0.  0.0001 
+param[cmb_TE_leakage_eps4] = 0.  0.0001
 
 n_observations = 1
-observation2 =  fisher_inis/params_planck_conservative.ini
-observation1 =  fisher_inis/params_mpk_LSST_with_window.ini
+observation1 =  fisher_inis/params_planck.ini
+observation2 =  fisher_inis/params_mpk_LSST_with_window.ini
 observation3 =  fisher_inis/params_sn.ini
