--- a/forecast/fisher_inis/params_planck_conservative.ini
+++ b/forecast/fisher_inis/params_planck_conservative.ini
@@ -5,15 +5,18 @@ name = CMB_PlanckLike
 n_obs = 2499
 
 #likelihood depends on the following parameters
-params = ombh2 omch2 theta h tau logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise cmb_n_noise cmb_A_noise_pol cmb_n_noise_pol cmb_A_tSZ
+params = ombh2 omch2 theta h tau logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise cmb_n_noise cmb_run_noise cmb_A_tSZ
 # temperature l cutoffs 
 lmin = 2
 lmax = 2500
 #The l resolution at high-ell; for smooth model you can set it to something like 40-60; for fast oscillating model set it to 3-5; (you may want to set it to be 1, but the mask mode-mixing and the 3D-2D projection makes it almost pracitcally impossible to have Delta l = 1 resolution in data analysis).
-l_resolution = 3
+l_resolution = 50
 #sky coverage for temperature data (0-1)
 fsky = 0.65
+#thermal SZ template
+tSZ_template = tSZ_template.dat
 
+#################These are not used ###########################################
 #polarization l cutoffs, if not specified use lmin_pol = lmin, lmax_pol = lmax
 lmin_pol = 30
 lmax_pol = 2000
@@ -22,7 +25,8 @@ fsky_pol = 0.3
 #residual of thermal dust emission (0-1)
 foreground_dust_residual = 0.05
 #thermal SZ template; must be in the same directory of this file
-tSZ_template = tSZ_template.dat
+##########################################################################
+
 
 
 #arXiv: 1007.0290
