--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -7,8 +7,10 @@ root = lcdm
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 #kMpc = 0.05
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-output_redshift = 4900
+output_redshift = 0
 
+lmax_scalar = 2200
+lmax_tensor = 1500
 
 #output variables (for SolvePert)
 ##options are:
@@ -72,6 +74,8 @@ tau = 0.078
 As = 2.2e-9
 #tilt of scalar power spectrum
 ns = 0.9655
+#tensor to scalar ratio
+r = 0.2
 
 #dark energy equation of state
 #standard w = w_0 + w_a (1-a)
