allow powerlaw parametrization for alpha

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -87,11 +87,16 @@ de_wa = 0.
 #de_zetas = 0.d0
 #de_betas = 6.d0
 
-#if w is defined as the effective background w that gives the same expansion history in wCDM model (only matters when alpha_M is nonzero); However, when you are using cs^2, r_B/M/H/T parametrization (see below), this line is ignored and w_is_background is always forced to be T. 
+############ EFT DE w option ###############################
+#if w is defined as the effective background w that gives the same expansion history in wCDM model (only matters when alpha_M is nonzero); However, when you are using cs^2, r_B/M/H/T parametrization (see below scheme 1), this line is ignored and w_is_background is always forced to be T. 
 w_is_background = T
 
+##################  EFT DE alpha functions ############################
+###################### scheme 1 constant c_s^2 model (when de_cs2 is defined below) #################
 #EFT dark energy  (you have to compile the code with DARK_ENERGY_MODEL = EFT in configure.in);
 ##use c_s^2 to parameterize alpha's. In this case w_is_background is forced to be true and you need to set w = constant (de_wa = 0)
+##in this scheme
+#alpha_{B,M,H,T} = alpha_0 r_{B, M, H, T} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for the same cosmology itself; alpha_0 = alpha_K0 + 6 alpha_B0^2; and alpha_K is determined by c_s^2.
 de_cs2 = 1.
 de_r_B  = 0.
 de_r_M = 0.
@@ -100,13 +105,19 @@ de_r_T = 0.
 #the code searches solution in the range 0< alpha_K0 + 6 alpha_B0^2 < alpha0_max; set alpha0_max here:
 de_alpha0_max = 100.
 
-###if de_cs2 is commented out, use the simple parametrization
+########## scheme 2, predefined function (if above de_cs2 is commented out) ####################
+#if you set alpha_power >=0 , alpha_X(a) = alpha_{X0} a ^ {alpha_power}
+#otherwise alpha_X(a) = alpha_{X0} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for a fixed LambdaCDM cosmology with \Omega_{m0} = 0.3
+alpha_power = -1  
+###the alpha_X0 values
 de_alpha_M0 = 0.
 de_alpha_K0 = 0.
 de_alpha_B0 = 0.
 de_alpha_T0 = 0.
 de_alpha_H0 = 0.
-#Coupled CDM-DE (you have to compile the code with DARK_ENERGY_MODEL = COUPLED_DE in configure.in)
+
+
+################for Coupled CDM-DE (you have to compile the code with DARK_ENERGY_MODEL = COUPLED_DE in configure.in) ###########################
 de_Q = 0.
 de_Qa = 0.
 
