finished ini files

--- a/forecast/fisher_inis/params_EUCLID.ini
+++ b/forecast/fisher_inis/params_EUCLID.ini
@@ -2,17 +2,17 @@
 genre = MPK
 name = MPK_EUCLID
 #this number should be n_z * n_k * n_mu
-n_obs = 112000
+n_obs = 8000
 
 #likelihood depends on the following parameters
-params = ombh2 omch2 theta h logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
+params = ombh2 omch2 omegam theta h logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
 
 #sky coverage
 fsky = 0.364
 
 #number of z, k, mu bins; mu = cos(theta) where theta is the angle between the line of sight and the k vector.
 n_z = 8
-n_k = 700
+n_k = 50
 n_mu = 20
 
 #redshift bins
@@ -38,7 +38,7 @@ window6 =    0.121294E-02
 window7 =    0.119675E-02
 window8 =    0.118710E-02
 
-k_linear_sampling = 0.01
+#k_linear_sampling = 0.01
 
 #here window functions are not specified; COOP will use a Gaussian window with sigma = kmin
 
