--- a/forecast/fisher_inis/params_LSST.ini
+++ b/forecast/fisher_inis/params_LSST.ini
@@ -3,10 +3,10 @@ genre = MPK
 name = MPK_LSST
 #this number should be n_z * n_k * n_mu
 
-n_obs=105000
+n_obs=7000
 #n_obs=504000
 #likelihood depends on the following parameters
-params = ombh2 omch2 theta h logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7
+params = ombh2 omch2 omegam theta h logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7
 
 #sky coverage
 fsky = 0.558
@@ -17,7 +17,7 @@ n_z = 7
 #n_k = 512
 #n_mu = 64
 
-n_k=750
+n_k=50
 n_mu=20
 
 #n_k=1200
@@ -34,7 +34,7 @@ kmin =    0.707408E-02   0.503287E-02   0.396848E-02   0.345637E-02   0.301327E-
 #maximum k cutoff, unit h Mpc^{-1}
 kmax =   0.078157  0.091582  0.110449  0.137099  0.173897  0.228662  0.307244
 
-k_linear_sampling = 0.01
+#k_linear_sampling = 0.01
 
 #define a window function in each bin
 #it can be a Gaussian width sigma (in h Mpc^{-1}) that gives |W(k)|^2 \propto exp[- k^2/sigma^2 ] (note: this sigma is different from sigma_W in 1201.5955 by a factor of sqrt(2))
