--- a/forecast/fisher_inis/params_planck.ini
+++ b/forecast/fisher_inis/params_planck.ini
@@ -7,7 +7,7 @@ name = CMB_PlanckLike
 n_obs = 2499
 
 #likelihood depends on the following parameters
-params = ombh2 omch2 theta h tau logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise cmb_n_noise cmb_run_noise cmb_A_noise_pol cmb_n_noise_pol cmb_run_noise_pol cmb_A_tSZ cmb_TE_leakage_eps0 cmb_TE_leakage_eps2 cmb_TE_leakage_eps4
+params = ombh2 omch2 omegam theta h tau logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 cmb_A_noise cmb_n_noise cmb_run_noise cmb_A_noise_pol cmb_n_noise_pol cmb_run_noise_pol cmb_A_tSZ cmb_TE_leakage_eps0 cmb_TE_leakage_eps2 cmb_TE_leakage_eps4
 # temperature l cutoffs 
 lmin = 2
 lmax = 2500
