--- a/forecast/fisher_inis/params_mpk.ini
+++ b/forecast/fisher_inis/params_mpk.ini
@@ -5,7 +5,7 @@ name = MPK_EUCLIDlike
 n_obs = 24000
 
 #likelihood depends on the following parameters
-params = ombh2 omch2 theta h logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
+params = ombh2 omch2 omegam theta h logA ns nrun r nt user_pp1 user_pp2 user_pp3 user_pp4 user_pp5 user_pp6 user_pp7 user_pp8 user_pp9 user_pp10 de_w de_wa de_alpha_K0 de_alpha_M0 de_alpha_B0 de_alpha_H0 de_alpha_T0 mpk_sigma_g mpk_b0_1 mpk_b0_2 mpk_b0_3 mpk_b0_4 mpk_b0_5 mpk_b0_6 mpk_b0_7 mpk_b0_8
 
 #sky coverage
 fsky = 0.5
