allow direct potential construction

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -118,6 +118,11 @@ de_alpha_H0 = 0.
 
 
 ################for Coupled CDM-DE (you have to compile the code with DARK_ENERGY_MODEL = COUPLED_DE in configure.in) ###########################
+##the standard parametrization
+##the coupling between CDM and dark energy
 de_Q = 0.
+##running of the coupling (Q(a) = de_Q + de_Qa * a)
 de_Qa = 0.
+
+
 
