--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,7 +2,7 @@
 
 
 #root for output files 
-root = lcdm
+root = fR
 
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 #kMpc = 0.05
@@ -65,6 +65,8 @@ omch2 = 0.1197
 #if you want to keep the primary CMB anistropy fixed, it is better to fix theta instead of H0
 #theta (in unit of 1/100) is only used when H0 is commented out 
 theta = 1.04085
+h_trial_min = 0.55
+h_trial_max = 0.8
 
 
 #reionization optical depth
@@ -120,9 +122,16 @@ de_alpha_H0 = 0.
 ################for Coupled CDM-DE (you have to compile the code with DARK_ENERGY_MODEL = COUPLED_DE in configure.in) ###########################
 ##the standard parametrization
 ##the coupling between CDM and dark energy
-de_Q = 0.
-##running of the coupling (Q(a) = de_Q + de_Qa * a)
-de_Qa = 0.
+##for f(R) Q = 0.4082
+de_Q = 0.4082
+
+##if de_np_index = 0, w(a) and Q are used to initialize the model (V(phi) is derived from w(a))
+### if de_np_index is nonzero, negative powerlaw or Hu-Sawikic f(R) model is used
+###if de_fR_epsilon = 0, negative power law V = V0 * phi^ (- de_np_index) is used; V0 is automatically determined to give the correct Omega_Lambda
+###if de_fR_epsilon is nonzero Hu-Sawicki model is used
+####f(R) = R - 2 Lambda + 2 Lambda/[n/epsilon (R/Lambda)^n+1]; where n = de_np_index and epsilon  = de_fR_epsilon; Lambda = 3 Omega_Lambda in COOP unitxs
+de_np_index = 4.
+de_fR_epsilon = 0.01
 
 
 
