--- a/nonlinear/Makefile
+++ b/nonlinear/Makefile
@@ -19,6 +19,10 @@ $(LIB):	$(OBJ)
 Test: $(OBJ) test.o $(FIRSTORDER)/libcoopfirstorder.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) test.o $(LINK)
 
+SphCol: $(OBJ) coupledDE_spherical_collapse.o $(FIRSTORDER)/libcoopfirstorder.a
+	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) coupledDE_spherical_collapse.o $(LINK)
+
+
 
 TestSimp: $(OBJ) testsimple.o $(FIRSTORDER)/libcoopfirstorder.a
 	$(FC) $(FFLAGS) $(INCLUDE) -o $@ $(OBJ) testsimple.o $(LINK)
