--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,12 +2,12 @@
 
 
 #root for output files 
-root = fR
+root = fR_bc
 
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
-#kMpc = 0.05
+kMpc = 0.05
 #output at fixed z (for SolvePert), only used when kMpc is commented out; COOP uses fixed z arrays so the actual z will be the closest one in the array but not exactly the number given here.
-output_redshift = 0
+#output_redshift = 0
 
 lmax_scalar = 2200
 lmax_tensor = 1500
@@ -48,7 +48,7 @@ lmax_tensor = 1500
 ## DE_alpha_B (alpha_B for EFT dark energy)
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
-variables  =  kMpc v_c v_b
+variables  =  lna T00 G00 
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 #variables = kMpc T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
@@ -131,7 +131,7 @@ de_Q = 0.4082
 ###if de_fR_epsilon is nonzero Hu-Sawicki model is used
 ####f(R) = R - 2 Lambda + 2 Lambda/[n/epsilon (R/Lambda)^n+1]; where n = de_np_index and epsilon  = de_fR_epsilon; Lambda = 3 Omega_Lambda in COOP unitxs
 de_np_index = 1.
-de_fR_epsilon = 0.05
-
+de_fR_epsilon = 0.15
+baryon_is_coupled = T
 
 
