add coupled DE more

--- a/nonlinear/Makefile
+++ b/nonlinear/Makefile
@@ -11,7 +11,7 @@ include ../compile_rules.in
 LIB = libcoopnonlinear.a
 OBJ = nonlinear.o ellipse_collapse.o coupledDE_collapse.o
 
-default: $(LIB) GetZ1 Solve TabZ1
+default: $(LIB) GetZ1 Solve TabZ1 CDSolve
 
 $(LIB):	$(OBJ) 
 	ar -r $@ $?
