--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -61,12 +61,12 @@ ombh2 = 0.02222
 omch2 = 0.1197
 
 #Hubble parameter
-#H0 = 70.
+H0 = 70.
 #if you want to keep the primary CMB anistropy fixed, it is better to fix theta instead of H0
 #theta (in unit of 1/100) is only used when H0 is commented out 
-theta = 1.04085
-h_trial_min = 0.65
-h_trial_max = 0.75
+#theta = 1.04085
+#h_trial_min = 0.65
+#h_trial_max = 0.75
 
 
 #reionization optical depth
