--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -123,15 +123,15 @@ de_alpha_H0 = 0.
 ##the standard parametrization
 ##the coupling between CDM and dark energy
 ##for f(R) Q = 0.4082
-de_Q = 0.1
+de_Q = 0.4082
 
 ##if de_np_index = 0, w(a) and Q are used to initialize the model (V(phi) is derived from w(a))
 ### if de_np_index is nonzero, negative powerlaw or Hu-Sawikic f(R) model is used
 ###if de_fR_epsilon = 0, negative power law V = V0 * phi^ (- de_np_index) is used; V0 is automatically determined to give the correct Omega_Lambda
 ###if de_fR_epsilon is nonzero Hu-Sawicki model is used
 ####f(R) = R - 2 Lambda + 2 Lambda/[n/epsilon (R/Lambda)^n+1]; where n = de_np_index and epsilon  = de_fR_epsilon; Lambda = 3 Omega_Lambda in COOP unitxs
-de_np_index = 1.
-de_fR_epsilon = 0.15
+de_np_index = 1
+de_fR_epsilon = 0.01
 baryon_is_coupled = T
 
 
