--- a/nonlinear/params.ini
+++ b/nonlinear/params.ini
@@ -1,16 +1,20 @@
 ##this ini file can be used for CDSolve
 
 ##output file
-output = collapse_solution.txt
+output = collapse_fR2.txt
 
 #======cosmological parameters====================
 #physical density of baryon
 ombh2 = 0.02222
-#physical density of CDM at z  = 0
+#physical density of CDM 
 omch2 = 0.1197
 
-#Hubble parameter in unit of km/s/Mpc
+#Hubble constant
 H0 = 70.
+#angular extension of sound horizon at recombination
+#theta = 1.04
+#h_trial_min = 0.65
+#h_trial_max = 0.75
 
 #reionization optical depth
 tau = 0.06
@@ -22,17 +26,17 @@ ns = 0.965
 
 ##the coupling between matter and dark energy
 ##for f(R) Q = 1/sqrt(6) = 0.4082
-de_Q = 0.41
+de_Q = 0.4082
 
 ## if de_fR_epsilon = 0, negative power law V = V0 * phi^ (- de_np_index) is used; V0 is automatically determined to give the correct Omega_Lambda
 ## if de_fR_epsilon is nonzero Hu-Sawicki model is used
 ## f(R) = R - 2 Lambda + 2 Lambda/[n/epsilon (R/Lambda)^n+1]; where n = de_np_index and epsilon  = de_fR_epsilon; Lambda = 3 Omega_Lambda in COOP unitxs
-de_np_index = 1.
-de_fR_epsilon = 0.15
+de_np_index = 1
+de_fR_epsilon = 0.01
 
 
 #====================== halo set up ===================
-collapse_fpk = 2.5
+collapse_fpk = 1.95
 collapse_e = 0
 collapse_p = 0
 
