update: couled DE collapse seems to be working

--- a/nonlinear/params.ini
+++ b/nonlinear/params.ini
@@ -1,7 +1,7 @@
 ##this ini file can be used for CDSolve
 
 ##output file
-output = collapse_fR2.txt
+output = collapse_fR.txt
 
 #======cosmological parameters====================
 #physical density of baryon
@@ -36,7 +36,7 @@ de_fR_epsilon = 0.01
 
 
 #====================== halo set up ===================
-collapse_fpk = 1.95
+collapse_fpk = 2.
 collapse_e = 0
 collapse_p = 0
 
