--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,7 +2,7 @@
 
 
 #root for output files 
-root = fR_bc
+root = fRweak
 
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 kMpc = 0.05
@@ -48,7 +48,7 @@ lmax_tensor = 1500
 ## DE_alpha_B (alpha_B for EFT dark energy)
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
-variables  =  lna T00 G00 
+variables  =  lna delta_c_sync delta_c delta_b cplde_phi cplde_phi_prime
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 #variables = kMpc T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
@@ -123,7 +123,7 @@ de_alpha_H0 = 0.
 ##the standard parametrization
 ##the coupling between CDM and dark energy
 ##for f(R) Q = 0.4082
-de_Q = 0.4082
+de_Q = 0.1
 
 ##if de_np_index = 0, w(a) and Q are used to initialize the model (V(phi) is derived from w(a))
 ### if de_np_index is nonzero, negative powerlaw or Hu-Sawikic f(R) model is used
