--- a/nonlinear/params.ini
+++ b/nonlinear/params.ini
@@ -36,10 +36,13 @@ de_fR_epsilon = 0.01
 
 
 #====================== halo set up ===================
-collapse_fpk = 2.
-collapse_e = 0
-collapse_p = 0
+#collapse_fpk = 5.78
+collapse_fpk = 0.5
+collapse_e = 0.
+collapse_p = 0.
 
 collapse_ratio_1 = 0.178
 collapse_ratio_2 = 0.178
 collapse_ratio_3 = 0.178
+
+normalize_to_early = T
