update: study failure of linear perturbation in halo models

--- a/nonlinear/params.ini
+++ b/nonlinear/params.ini
@@ -37,7 +37,7 @@ de_fR_epsilon = 0.01
 
 #====================== halo set up ===================
 #collapse_fpk = 5.78
-collapse_fpk = 0.5
+collapse_fpk = 2.
 collapse_e = 0.
 collapse_p = 0.
 
