--- a/nonlinear/params.ini
+++ b/nonlinear/params.ini
@@ -31,8 +31,8 @@ de_Q = 0.4082
 ## if de_fR_epsilon = 0, negative power law V = V0 * phi^ (- de_np_index) is used; V0 is automatically determined to give the correct Omega_Lambda
 ## if de_fR_epsilon is nonzero Hu-Sawicki model is used
 ## f(R) = R - 2 Lambda + 2 Lambda/[n/epsilon (R/Lambda)^n+1]; where n = de_np_index and epsilon  = de_fR_epsilon; Lambda = 3 Omega_Lambda in COOP unitxs
-de_np_index = 1
-de_fR_epsilon = 0.01
+de_np_index = 1.
+de_fR_epsilon = 0.15
 
 
 #====================== halo set up ===================
