update: update params

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,7 +2,7 @@
 
 
 #root for output files 
-root = fR
+root = lcdm
 
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 kMpc = 0.05
@@ -99,7 +99,7 @@ w_is_background = T
 ##use c_s^2 to parameterize alpha's. In this case w_is_background is forced to be true and you need to set w = constant (de_wa = 0)
 ##in this scheme
 #alpha_{B,M,H,T} = alpha_0 r_{B, M, H, T} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for the same cosmology itself; alpha_0 = alpha_K0 + 6 alpha_B0^2; and alpha_K is determined by c_s^2.
-de_cs2 = 1.
+de_cs2 = 0.1
 de_r_B  = 0.
 de_r_M = 0.
 de_r_H = 0.
@@ -110,7 +110,7 @@ de_alpha0_max = 100.
 ########## scheme 2, predefined function (if above de_cs2 is commented out) ####################
 #if you set alpha_power >=0 , alpha_X(a) = alpha_{X0} a ^ {alpha_power}
 #otherwise alpha_X(a) = alpha_{X0} \Omega_{DE}(a)/\Omega_{DE,0} where \Omega_{DE} is computed for a fixed LambdaCDM cosmology with \Omega_{m0} = 0.3
-alpha_power = -1  
+#alpha_power = 4
 ###the alpha_X0 values
 de_alpha_M0 = 0.
 de_alpha_K0 = 0.
