--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -48,7 +48,7 @@ lmax_tensor = 1500
 ## DE_alpha_B (alpha_B for EFT dark energy)
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
-variables  =  lna delta_c v_c cplde_phi cplde_phi_prime
+variables  =  lna Phi Psi
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 #variables = kMpc T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
