--- a/configure_macOS.in
+++ b/configure_macOS.in
@@ -31,9 +31,9 @@ C_COMPILER = $(GCC_NAME)
 ########set to null string for librarys that are not installed ###############
 ##############################################################################
 ### set to EFT for effective field theory, LAMBDA for cosmological constant
-DARK_ENERGY_MODEL = EFT
+#DARK_ENERGY_MODEL = EFT
 #DARK_ENERGY_MODEL = COUPLED_DE
-#DARK_ENERGY_MODEL = LAMBDA
+DARK_ENERGY_MODEL = LAMBDA
 
 ##LAPACK lib; for MacOS set LAPACK = APPLE
 LAPACK = APPLE
@@ -180,7 +180,7 @@ endif
 
 ###set fftw flags here
 ifneq ($(FFTW3),)
-LINK += -L$(FFTW3)/lib -lfftw3 -lfftw3_mpi
+LINK += -L$(FFTW3)/lib -lfftw3 
 FFLAGS += -DHAS_FFTW=1
 CFLAGS += -DHAS_FFTW=1
 INCLUDE += -I$(FFTW3)/include 
