update: add background density outputs

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -22,6 +22,11 @@ lmax_tensor = 1500
 ## t = H_0 * age
 ## H = H / H_0
 ## Ha = H a / (H_0 a_0)
+## rho_c = CDM density in unit of (H_0^2 M_p^2)
+## rho_b = baryon density in unit of (H_0^2 M_p^2)
+## rho_gamma = radiation density in unit of (H_0^2 M_p^2)
+## rho_nu = (massless) neutrino density in unit of (H_0^2 M_p^2)
+## rho_de = dark energy density in unit of (H_0^2 M_p^2)
 ## T00 = T_{00} a^2
 ## T0i = T_{0i} a^2
 ## G00 = G_{00} a^2
@@ -48,7 +53,9 @@ lmax_tensor = 1500
 ## DE_alpha_B (alpha_B for EFT dark energy)
 ## DE_alpha_H (alpha_H for EFT dark energy)
 ## DE_M_star  (M* / M_p for EFT dark energy)
-variables  =  lna Phi Psi
+
+variables  =  lna Phi Psi rho_c rho_b rho_gamma rho_nu rho_de H
+
 #variables = kMpc Phi Psi DE_cs2 DE_alpha  DE_alpha_B
 #variables = lna T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
 #variables = kMpc T00 G00 T0i G0i Phi Psi delta_c v_c delta_b v_b delta_g v_g delta_nu v_nu pi H DE_M_star DE_alpha_cs2
