--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -130,6 +130,7 @@ de_alpha_H0 = 0.
 ##the standard parametrization
 ##the coupling between CDM and dark energy
 ##for f(R) Q = 0.4082
+de_epss = 0.1
 de_Q = 0.
 
 ##if de_np_index = 0, w(a) and Q are used to initialize the model (V(phi) is derived from w(a))
