update: make the code faster

--- a/nonlinear/uncoupled_params.ini
+++ b/nonlinear/uncoupled_params.ini
@@ -1,7 +1,7 @@
 ##this ini file can be used for CDSolve
 
 ##output file
-output = collapse_wm0p9_copy.txt
+output = collapse_wm0p9.txt
 
 #======cosmological parameters====================
 #physical density of baryon
