--- a/mapio/spider.ini
+++ b/mapio/spider.ini
@@ -2,11 +2,12 @@
 # DO_ALL =  DO_MASK + DO_KERNEL + DO_NOISE + DO_SIGNAL + DO_DATA + DO_QB + DO_MUB;
 # DO_ALL_BUT_MASK = DO_KERNEL + DO_NOISE + DO_SIGNAL +  DO_DATA + DO_QB + DO_MUB;
 # DO_ALL_BUT_KERNEL = DO_NOISE + DO_SIGNAL +  DO_DATA + DO_QB + DO_MUB;
+# UPDATE_DATA = DO_DATA + DO_QB + DO_MUB;
 #in case of failure of DO_QB or DO_MUB, you can reduce the number of ell bins and rerun DO_QB and DO_MUB. (no need to rerun other steps).
-action = DO_ALL_BUT_KERNEL
+action = COMPARE_CLS
 
 # I, QU, or IQU
-map_genre = I
+map_genre = IQU
 #unit 
 map_unit = muK
 # set upperbound and lowerbound to reduce bad pixel contaminations
@@ -17,9 +18,9 @@ map_minval = -300.
 #lmax used for data analysis
 lmax_data = 300
 #lmin used for data analysis
-lmin_data = 50
+lmin_data = 30
 #number of ell bins (the binning is automatically done)
-num_ell_bins = 6
+num_ell_bins = 8
 
 #number of channels
 num_channels = 3
@@ -33,9 +34,9 @@ sim_index_width = 4
 ##number of iterations
 num_iterations = 12
 #output q_b root, the outputs will be ROOT_ITER1.dat, ROOT_ITER2.dat ...
-qb_output_root = spider/qb
-mub_output_root = spider/mub
-cl_output_root = spider/cl
+qb_output_root = outputs/qb
+mub_output_root = outputs/mub
+cl_output_root = outputs/cl
 
 #***************************** MASK **********************************
 #mask root; the i-th mask file will be ROOT_i.fits
@@ -44,7 +45,7 @@ mask_root = spider/data/mask
 lmax_mask = 300
 ## --- hits cut
 hits_root = spider/data/proj
-hits_cut = 0.2
+hits_cut = 1.
 ##----condition number cut
 #cond_root = spider/data/cond
 #cond_cut = 7.
@@ -77,12 +78,12 @@ signal_sim_root = spider/signal/r0/map
 #signal pseudo cl root (intermediate resutls); the pseudo Cl for i-th map and j-th map cross correlation will be ROOT_i_j.fits 
 signal_cl_root = spider/signal/r0/signalcl
 #input model cl
-model_cl_file = spider/r0_totCls.dat
+model_cl_file = spider/models/r0_totCls.dat
 
 
 ##*********************** DATA ***************************************
 #map root; the i-th map file will be ROOT_i.fits
-data_map_root = spider/data/map
+data_map_root = spider/data/dbl
 ##output data pseudo cls (intermediate resutls), the pseudo Cl for i-th map and j-th map cross correlation will be ROOT_i_j.fits 
 data_cl_root = spider/data/datacl
 
