update: switch to uniform bins

--- a/mapio/spider.ini
+++ b/mapio/spider.ini
@@ -4,7 +4,10 @@
 # DO_ALL_BUT_KERNEL = DO_NOISE + DO_SIGNAL +  DO_DATA + DO_QB + DO_MUB;
 # UPDATE_DATA = DO_DATA + DO_QB + DO_MUB;
 #in case of failure of DO_QB or DO_MUB, you can reduce the number of ell bins and rerun DO_QB and DO_MUB. (no need to rerun other steps).
-action = UPDATE_DATA
+action = DO_ALL
+
+#feedback (0 = no feedback)
+feedback = 2
 
 # I, QU, or IQU
 map_genre = IQU
@@ -20,7 +23,7 @@ lmax_data = 300
 #lmin used for data analysis
 lmin_data = 30
 #number of ell bins (the binning is automatically done)
-num_ell_bins = 8
+num_ell_bins = 12
 
 #number of channels
 num_channels = 3
@@ -76,14 +79,14 @@ num_signal_sims = 20
 #signal simulation root; simulation i of j-th map is ROOT_j_SIMi.fits; these files are used to calculate the transfer F_l's.
 signal_sim_root = spider/signal/r0/map
 #signal pseudo cl root (intermediate resutls); the pseudo Cl for i-th map and j-th map cross correlation will be ROOT_i_j.fits 
-signal_cl_root = spider/signal/r0/signalcl
+signal_cl_root = spider/signal/r0p03/signalcl
 #input model cl
-model_cl_file = spider/models/r0_totCls.dat
+model_cl_file = spider/models/r0p03_totCls.dat
 
 
 ##*********************** DATA ***************************************
 #map root; the i-th map file will be ROOT_i.fits
-data_map_root = spider/data/dbl
+data_map_root = spider/data/map
 ##output data pseudo cls (intermediate resutls), the pseudo Cl for i-th map and j-th map cross correlation will be ROOT_i_j.fits 
 data_cl_root = spider/data/datacl
 
