update: xfaster DO_ALL_BUT_MASK

--- a/mapio/spider.ini
+++ b/mapio/spider.ini
@@ -4,7 +4,7 @@
 # DO_ALL_BUT_KERNEL = DO_NOISE + DO_SIGNAL +  DO_DATA + DO_QB + DO_MUB;
 # UPDATE_DATA = DO_DATA + DO_QB + DO_MUB;
 #in case of failure of DO_QB or DO_MUB, you can reduce the number of ell bins and rerun DO_QB and DO_MUB. (no need to rerun other steps).
-action = DO_ALL
+action = DO_ALL_BUT_MASK
 
 #feedback (0 = no feedback)
 feedback = 2
