update: update read_tables

--- a/nonlinear/export.ini
+++ b/nonlinear/export.ini
@@ -1,6 +1,6 @@
 ##this ini file can be used for CDExport
 ##output file root (if it contains any path, make sure the path exists): 
-output_root = myoutputs/test
+output_root = test
 ##FITS or BINARY
 output_format = BINARY
 #======cosmological parameters====================
