update: allow sigma_8 normalization

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -2,7 +2,7 @@
 
 
 #root for output files 
-root = lcdm
+root = test
 
 # fixed wave number  (for SolvePert); COOP uses fixed k arrays so the actual k will be the closest one in the array but not exactly the number given here.
 kMpc = 0.05
@@ -79,8 +79,10 @@ H0 = 70.
 #reionization optical depth
 tau = 0.078
 
-# amplitude of scalar power spectrum
-As = 2.2e-9
+# amplitude of scalar power spectrum; use one of the following
+#sigma_8 = 0.86972522
+As = 2.3e-9
+
 #tilt of scalar power spectrum
 ns = 0.9655
 #tensor to scalar ratio
