--- a/nonlinear/export.ini
+++ b/nonlinear/export.ini
@@ -11,16 +11,19 @@ ombh2 = 0.02222
 omch2 = 0.1197
 
 #Hubble constant
-#H0 = 68.
+H0 = 68.
 #or you can also use angular extension of sound horizon at recombination (you need to comment out H0 to use theta)
-theta = 1.04085
-h_trial_min = 0.55
-h_trial_max = 0.8
+#theta = 1.04085
+#h_trial_min = 0.55
+#h_trial_max = 0.8
 
 #reionization optical depth
 tau = 0.078
-# amplitude of scalar power spectrum
-As = 2.1955e-9
+
+# use either As (amplitude of scalar power spectrum) or sigma_8 to normalize
+sigma_8 = 0.8
+#As = 2.1955e-9
+
 #tilt of scalar power spectrum
 ns = 0.9655
 
