update: update MCMC module: make it compatible with the late EFT module

--- a/firstorder/params.ini
+++ b/firstorder/params.ini
@@ -81,7 +81,8 @@ tau = 0.078
 
 # amplitude of scalar power spectrum; use one of the following
 #sigma_8 = 0.86972522
-As = 2.3e-9
+#As = 2.3e-9
+logAm2tau = 2.91
 
 #tilt of scalar power spectrum
 ns = 0.9655
