--- a/forecast/myinis/eftde.ini
+++ b/forecast/myinis/eftde.ini
@@ -4,8 +4,8 @@ param[tau] = 0.078  0.01 0.3 0.01 0.01
 param[theta] = 1.04085 0.5  1.5 0.0001 0.0001
 param[de_w] = -1.
 param[de_alpha_M0] = 0. -0.5 0.5 0.01 0.01
-param[de_alpha_K0] = 0. -0.2 0.2 0.01 0.01
-param[de_alpha_B0] = 0. -0.2 0.2 0.01 0.01
+param[de_alpha_K0] = 0.1 
+param[de_alpha_B0] = 0. 
 param[de_alpha_T0] = 0.
 param[de_alpha_H0] = 0.
 param[logAm2tau] = 2.934 2. 4. 0.0003 0.0003
@@ -160,10 +160,8 @@ cls_root = chains/lcdm
 output_redshifts = 0.   0.5  1.  1.5  2.
 
 w_is_background = F
-alpha_genre = omega
 
-
-use_CMB = T
+use_CMB = F
 use_SN = T
 use_BAO = T
 use_HST = T
