--- a/forecast/myinis/std6.ini
+++ b/forecast/myinis/std6.ini
@@ -2,6 +2,7 @@ param[ombh2] = 0.02223508 0.005 0.1 0.001 0.001
 param[omch2] = 0.1196  0.05 0.2 0.01 0.01
 param[tau] = 0.07832564  0.01 0.3 0.01 0.01
 param[theta] = 1.041607 0.5  1.5 0.0001 0.0001
+#param[h] = 0.7
 param[logAm2tau] = 2.911  2. 4. 0.0003 0.0003
 param[ns] = 0.9624 0.5 1.5 0.008 0.008
 param[A_cib_217] = 65 0 200 10 1.2
@@ -141,21 +142,22 @@ n_lc_prior = 1
 #name1 name2 weight1 weight2 center sigma
 lc_prior1 = ksz_norm A_sz 1 1.6 9.5 3
  
-action = TEST
+action = MCMC
 chain_name = chains/lcdm
 paramnames = paramnames/std6.paramnames    
 propose_matrix = 
 last_slow = ns
-overwrite = F
+overwrite = T
 update_seconds = 500
 feedback = 3
-total_steps = 12000
+total_steps = 20
 
-use_CMB = T
+use_CMB = F
 use_SN = T
 use_BAO = T
 use_HST = T
-use_lensing = T
+use_WL = T
+use_lensing = F
 
 
 cmb_dataset1 = ../data/cmb/hi_l/plik/plik_dx11dr2_HM_v18_TTTEEE.clik
